# wildfire_risk_prediction

./: .gitignore  README.md  pyproject.toml
planning/: architecture.md  checklist.md
prelim_eda/: eda_firms_wfigs_current.ipynb  eda_historical_FIRMS.ipynb  eda_historical_ics209.ipynb  eda_weather_api_comparison.ipynb
