[project]
name = "wildfire"
version = "0.1.0"
description = "Near-real-time wildfire risk system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.3",
    "herbie-data>=2026.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = []
